--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </ul>
     </nav>
     <div class="content">
-        <img src="resim1.JPG" alt="">
+        <img src="resim1.JPG" alt="pic">
     </div>
     <footer>
         <div class="left-side">
